# poverty-trap

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: README.md
docs/design/: architecture.md  model-verification.md
docs/literature/: README.md  calibration.md
docs/literature/papers/: INDEX.md  README.md  azariadis-stachurski-2005.md  barabasi-albert-1999.md  barrett-carter-2006.md  chetty-2014.md  chetty-2022-social-capital.md  convert_papers.py  corak-2013.md  fetch_papers.py  ghatak-2015.md  granovetter-1973.md  mani-2013.md  merton-1968.md  oecd-2018.md  pluchino-2018.md
experiments/: README.md
experiments/calibration/: README.md  run.py
experiments/effort-marginal-impact/: README.md  run.py
experiments/mobility-drivers/: README.md  run.py
src/poverty_trap/: README.md  __init__.py  builder.py
src/poverty_trap/core/: __init__.py  bands.py  config.py  context.py  engine.py  state.py
src/poverty_trap/dynamics/: capital_returns.py  effort.py  neighborhood.py  poverty_premium.py  value_creation.py
src/simulation/: README.md  __init__.py  builder.py  cli.py
src/simulation/core/: config.py  (+3 more)
src/ux/: README.md
tests/: conftest.py  test_bands.py  test_builder_cli.py  test_capital_returns.py  test_config.py  test_determinism.py  test_diffusion.py  test_dynamics.py  test_engine.py  test_lifecycle.py  test_network.py  test_observe.py  test_opportunity.py  test_pooling.py  test_regime.py  test_state.py
ux/: README.md
ux/server/: app.py
ux/web/: package-lock.json
(+47 files in other folders)
