[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poverty-trap"
version = "0.1.0"
description = "An agent-based simulation engine for poverty-trap dynamics: structure, effort, opportunity, networks and generations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dietmar Luther Krause Gutierrez" }]
keywords = ["agent-based-modeling", "poverty-trap", "economics", "simulation", "complexity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8"]
viz = ["matplotlib>=3.7"]

[project.scripts]
poverty-trap = "simulation.cli:main"

[project.urls]
Homepage = "https://github.com/diet-krause/poverty-trap"
Documentation = "https://github.com/diet-krause/poverty-trap/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]
include = ["simulation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = true
